<resources>
    <string name="app_name">GitHub Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="content_desc_github_image_icon">GitHub Image Icon</string>
    <string name="label_search_user">Search User</string>
    <string name="text_loading">Loading...</string>
    <string name="welcome">Selamat Datang, silakan masukkan kata kunci untuk mencari pengguna</string>
    <string name="dinoctocat_image">Dinoctocat Image</string>
    <string name="text_no_favorite">Ups... User yang difavoritkan belum ada nih.</string>
    <string name="label_repository">Repository</string>
    <string name="label_followers">Followers</string>
    <string name="label_following">Following</string>
    <string name="cont_desc_fab">Favorite Floating Action Button</string>
</resources>